# sql-jornada-de-dados

./: LICENSE  Makefile  README.md  architecture.excalidraw  docker-compose.yaml  notes_init_northwind_dbt.md  pyproject.toml  servers.json
example_sql_scripts/: automated_creation_of_transactions.sql  create_database_example.sql  create_table_example.sql  itau.sql  notes.md  stored_procedure_example_2.sql  use_store_procedure_example.sql  use_stored_procedure_example_2.sql
example_sql_scripts/acid_db_examples/: commit_example.sql  not_commit_example.sql  run_after_not_commit_example.sql
example_sql_scripts/index_db_examples/: bitmap_index_scan_OR_condition.sql  check_indexes_table.sql  drop_index.sql  index_cost.sql  index_only_scan_query.sql  index_scan.sql  index_scan_AND_condition.sql  seq_scan.sql  seq_scan_like.sql
example_sql_scripts/itau_db_examples/: delete_example.sql  drop_database_example.sql  insert_into_example.sql  stored_procedure_example.sql  update_example.sql
example_sql_scripts/northwind_db_examples/: create_materialized_view_sales.sql  employee_audit.sql  temp_table_example.sql  (+4 more)
init-other-db-scripts/: acid.sql  index_db.sql  itau.sql  partition_db.sql  queryorder.sql  trigger.sql
init-scripts/: northwind.sql
northwind_dbt/: notes_init_northwind_dbt.md
scripts/: init_acid_database.sh  init_db.sh  init_itau_database.sh  init_northwind_views.sh  init_trigger_database.sh
views/: monthly_revenue.sql  revenue_per_customer.sql  revenue_per_customer_per_group.sql  top_10_products.sql  total_revenue_per_year.sql  uk_customers_pay_more_1000.sql
(+41 files in other folders)
