[project]
name = "sql-jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Nunes Patricio",email = "igornunespatricio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
